--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "opensheetmusicdisplay": "^1.7.4",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-data-grid": "^7.0.0-beta.22",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -30,6 +31,7 @@
     "react-piano": "^3.1.3",
     "react-redux": "^8.0.5",
     "react-rotary-knob": "^3.0.3",
+    "react-shepherd": "^4.2.0",
     "redux-undo": "^1.0.1",
     "reselect": "^4.1.7",
     "tone": "^14.8.49",
