--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.9",
     "@reduxjs/toolkit": "^1.9.2",
+    "@types/pluralize": "^0.0.30",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "d3-color": "^3.1.0",
@@ -25,6 +26,7 @@
     "lucide-react": "^0.265.0",
     "midi-writer-js": "^2.1.4",
     "opensheetmusicdisplay": "^1.7.4",
+    "pluralize": "^8.0.0",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-data-grid": "^7.0.0-beta.22",
