added proper midi + wav file support

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@headlessui/react": "^1.7.9",
     "@reduxjs/toolkit": "^1.9.2",
     "@tonejs/midi": "^2.0.28",
+    "@types/audiobuffer-to-wav": "^1.0.2",
     "@types/pluralize": "^0.0.30",
+    "audiobuffer-to-wav": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "d3-color": "^3.1.0",
@@ -25,7 +27,6 @@
     "flowbite-react": "^0.3.8",
     "lodash": "^4.17.21",
     "lucide-react": "^0.265.0",
-    "midi-writer-js": "^2.1.4",
     "opensheetmusicdisplay": "^1.7.4",
     "pluralize": "^8.0.0",
     "react": "^18.2.0",
