--- a/package.json
+++ b/package.json
@@ -47,10 +47,11 @@
     "reselect": "^4.1.7",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
-    "tone": "^14.8.49",
+    "tone": "^14.7.77",
     "webmidi": "^3.1.4"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.4",
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
