--- a/package.json
+++ b/package.json
@@ -39,10 +39,8 @@
     "react-piano": "^3.1.3",
     "react-range-slider-input": "^3.0.7",
     "react-redux": "^8.0.5",
-    "react-rotary-knob": "^3.0.3",
     "react-router-dom": "^6.15.0",
     "react-shepherd": "^4.2.0",
-    "react-spring-3d-carousel": "^1.3.4",
     "redux-undo": "^1.0.1",
     "reselect": "^4.1.7",
     "tailwind-merge": "^1.14.0",
@@ -51,6 +49,8 @@
     "webmidi": "^3.1.4"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.6",
     "@types/jest": "^29.5.4",
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.26",
