--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "@headlessui/react": "^1.7.9",
     "@reduxjs/toolkit": "^1.9.2",
     "@tonejs/midi": "^2.0.28",
-    "@types/audiobuffer-to-wav": "^1.0.2",
-    "@types/pluralize": "^0.0.30",
     "audiobuffer-to-wav": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
@@ -57,7 +55,8 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "tone": "^14.7.77",
-    "webmidi": "^3.1.4"
+    "webmidi": "^3.1.4",
+    "ws": "^8.15.1"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.2.0",
@@ -69,11 +68,14 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/audiobuffer-to-wav": "^1.0.4",
     "@types/jest": "^29.5.4",
     "@types/lodash": "^4.14.191",
+    "@types/pluralize": "^0.0.33",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-scroll-sync": "^0.8.4",
+    "@types/ws": "^8.5.10",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "electron": "^28.0.0",
