configured electron and framer

--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
   "name": "harmonia",
+  "productName": "Harmonia",
   "private": true,
-  "main": "main.js",
+  "main": ".vite/build/main.js",
   "homepage": "https://brendanzelikman.github.io/harmonia/",
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "test": "vitest",
     "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
     "build": "tsc && vite build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "preview": "vite preview",
-    "samples": "node scripts/generateSamples.js && node scripts/generateCategories.js",
-    "package": "electron-forge package",
-    "make": "electron-forge make"
+    "samples": "node scripts/generateSamples.js && node scripts/generateCategories.js"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.9",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@reduxjs/toolkit": "^1.9.2",
     "@tonejs/midi": "^2.0.28",
     "audiobuffer-to-wav": "^1.0.0",
@@ -29,16 +31,16 @@
     "d3-color": "^3.1.0",
     "electron-squirrel-startup": "^1.0.0",
     "esbuild": "^0.17.8",
-    "flowbite": "^1.6.3",
-    "flowbite-react": "^0.3.8",
+    "framer-motion": "^10.16.16",
     "idb": "^7.1.1",
+    "is-electron": "^2.2.2",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "opensheetmusicdisplay": "^1.7.4",
     "pluralize": "^8.0.0",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
-    "react-data-grid": "^7.0.0-beta.22",
+    "react-data-grid": "7.0.0-beta.22",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
@@ -65,10 +67,12 @@
     "@electron-forge/maker-squirrel": "^7.2.0",
     "@electron-forge/maker-zip": "^7.2.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
+    "@electron-forge/plugin-vite": "^7.2.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/typography": "^0.5.10",
     "@types/audiobuffer-to-wav": "^1.0.4",
+    "@types/electron-squirrel-startup": "^1.0.2",
     "@types/jest": "^29.5.4",
     "@types/lodash": "^4.14.191",
     "@types/pluralize": "^0.0.33",
@@ -78,13 +82,13 @@
     "@types/ws": "^8.5.10",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
-    "electron": "^28.0.0",
+    "electron": "^28.1.0",
     "gh-pages": "^5.0.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2",
     "vite": "^4.5.0",
-    "vite-tsconfig-paths": "^4.2.1",
+    "vite-tsconfig-paths": "^4.2.2",
     "vitest": "^0.28.4"
   }
 }
