--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-hotkeys-hook": "^4.4.1",
     "react-icons": "^4.8.0",
     "react-moment": "^1.1.3",
+    "react-pageflip": "^2.0.3",
     "react-piano": "^3.1.3",
     "react-range-slider-input": "^3.0.7",
     "react-redux": "^8.0.5",
