--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "is-electron": "^2.2.2",
     "json-edit-react": "^1.15.4",
     "jszip": "^3.10.1",
+    "latest": "^0.2.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "node": "^23.7.0",
     "opensheetmusicdisplay": "^1.7.4",
     "pluralize": "^8.0.0",
     "react": "^18.2.0",
