--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "build": "tsc && vite build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "samples": "node scripts/generateSamples.js && node scripts/generateCategories.js"
+    "samples": "node scripts/generateSamples.js && node scripts/generateCategories.js",
+    "start:lan": "vite --host",
+    "ws": "node localServer.js",
+    "lan": "concurrently \"npm:ws\" \"npm:start:lan\""
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
@@ -41,7 +44,8 @@
     "redux-undo": "^1.0.1",
     "reselect": "^4.1.7",
     "tone": "^15.1.4",
-    "webmidi": "^3.1.4"
+    "webmidi": "^3.1.4",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
@@ -49,7 +53,9 @@
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/ws": "^8.18.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "concurrently": "^9.2.1",
     "gh-pages": "^5.0.0",
     "tailwindcss": "^4.1.3",
     "tailwindcss-animate": "^1.0.7",
