--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
     "vite": "^6.2.5",
     "vite-tsconfig-paths": "^4.2.2",
     "vitest": "^3.1.1"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.5"
   }
 }
